fix padding on tablet mode

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -19,7 +19,7 @@
 }
 
 .container {
-  @apply mx-auto max-w-4xl px-3 pt-36 sm:px-0;
+  @apply mx-auto max-w-4xl px-3 pt-36 lg:px-0;
 }
 
 .hr {
